--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-page-background-color;
+    @apply font-base;
+  }
+}
